the version without ability to choose the version of the report